--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.3.1",
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.4.0",
     "postcss-reporter": "^6.0.0"
